--- a/coffee-shop-exercise/day-06/CoffeeShop/css/main.css
+++ b/coffee-shop-exercise/day-06/CoffeeShop/css/main.css
@@ -96,7 +96,7 @@ html{
 .section__text--aligned{
     width: 40%;
 }
-.section__flex{
+.section__flex--center{
     display:flex;
     flex-direction: row;
     justify-content: center;
@@ -124,4 +124,14 @@ html{
     display: flex;
     justify-content: space-between;
     width: 40%;
+}
+.section__back-image{
+    background-image: url("../assets/coldbrewbackground.png");
+    background-position: center;
+    background-size: cover;
+    width: 435px;
+    height: 435px;
+}
+.section__spacing{
+    min-height: 500px;
 }
