--- a/coffee-shop-exercise/day-06/CoffeeShop/css/menu.css
+++ b/coffee-shop-exercise/day-06/CoffeeShop/css/menu.css
@@ -1,11 +1,3 @@
-html{
-    font-size: 16px;
-    width: 100vw;
-    color: #393939;
-}
-#navigation-top{
-    background-color: #fff0ed;
-}
 #image-nav{
     background-image: url("../assets/coffee-circle.jpg");
     height: 75vh;
@@ -13,30 +5,6 @@ html{
     background-size: cover;    
 }
 
-.navMenu, .navMenu:hover, .navMenu:visited, .navMenu:link, .navMenu:active{
-    text-decoration: none;
-    font: 100 1.3125rem Helvetica;
-    color: #393939;
-}
-#nav-blue{
-    color: #5BACC3;
-}
-#headingtwo-nitro{
-    margin: inherit;
-    font: 100 3.75rem Helvetica;
-}
-.style-inline-block{
-    width: 160px;
-    padding: 0 20px;
-    text-align: center;
-    box-sizing: border-box;
-}
-.list-padding{
-    padding-left: inherit;
-}
-.inline-block{
-    display: flex;
-}
 #subNavigation{
     height: 74px;
     background-color: #393939;
@@ -46,26 +14,18 @@ html{
     height: 185px;
     color: #FFF;
     background-color: #393939;   
-    text-align: center; 
     font: 100 3.75rem Helvetica;
-    margin: 0 auto;
 }
-#listSubMenu{
-    font: 1.3125rem Helvetica;
-    text-transform: uppercase;
-    margin: 0;
-    text-align: center;
-}
+
 .style-inline-block-2{
-    box-sizing: border-box;
     width: 180px;
     padding: 0px 10px;
     border-left: 2px solid #5BACC3;
     margin: 25px 0px;
+    font-size: 1.3125rem;
 }
-.removeAnchorUnderline:hover, .removeAnchorUnderline:visited, .removeAnchorUnderline:link, .removeAnchorUnderline:active
+#nav-white
 {
-    text-decoration: none;
     color: #FFF;
 }
 .menu{
@@ -81,6 +41,7 @@ html{
     font: 100 3.75rem Helvetica;
     color: #393939;
     margin-top: 0;
+    padding-top: 2%;
 }
 .menu__drink-information{
     font: 1.125rem Helvetica;
@@ -97,5 +58,8 @@ html{
     font: 1.125rem Helvetica;
 }
 .logo{
-    min-height: 50px;
+    height: 50px;
+}
+.section__inherit-margin{
+    margin: inherit;
 }
