--- a/coffee-shop-exercise/day-10/CoffeeShop/scss/main.scss
+++ b/coffee-shop-exercise/day-10/CoffeeShop/scss/main.scss
@@ -21,6 +21,9 @@ html{
     font: 1.3125rem Helvetica;
     position: absolute;
 }
+.section__button-press:active{
+    transform: translateX(5px) translateY(5px);
+}
 .section__nothing-box{
     width: 180px;
     height: 55px;
@@ -58,6 +61,19 @@ html{
     font-size: 2.8125rem;
     color: #FFF;
     padding: 0% 2%;
+    animation: pulse 2.5s infinite;
+}
+
+@keyframes pulse{
+    0%{
+        background-color:rgba(0, 0, 0, 0.85) ;
+    }
+    50%{
+        background-color: #5BACC3;
+    }
+    100%{
+        background-color: rgba(0, 0, 0, 0.85);
+    }
 }
 .section__footer--spacing{
     font-size: 1.3125rem;
@@ -140,6 +156,8 @@ html{
     background-size: cover;
     width: 435px;
     height: 435px;
+    position: relative;
+    z-index: 2;
 }
 .section__spacing{
     min-height: 500px;
@@ -151,6 +169,7 @@ html{
     position: relative;
     top: -25px;
     right: 25px;
+    z-index: 1;
 }
 .section__image--absolute{
     position: absolute;
@@ -171,4 +190,22 @@ html{
     height: 50px;
     bottom: 10px;
     right: 0;
+}
+.section__spin-animation{
+    width: inherit;
+    height: inherit;
+    background-image: url(../assets/tiltedcan.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.section__spin-animation:hover{
+    animation: spin 2s infinite;
+}
+@keyframes spin {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
 }
